2013-05-05  Borut Razem  <borutr@users.sourceforge.net>
  * man/gpasm.1.in, man/fr/gpasm.1.in, gpasm/gpasm.c, doc/gputils.lyx:
    fixed English typos, applied patch
    #265 French trenslation of gputils/man/fr/gpasm.1.in,
    thanks to Alain Portal

2013-05-04  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/gpasm.c, doc/gputils.lyx:
    reorder the usage options listing
  * man/gpasm.1.in: added missing --mpasm-compatible and -P options
  * man/fr/gpasm.1.in: added missing --mpasm-compatible and -P
    options, prepared for French translation

2013-04-29  Borut Razem  <borutr@users.sourceforge.net>
  * configure.ac, configure, doc/gputils.lyx: version changed to 1.2.0

2013-04-21  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/testsuite/gpasm.project/objfiles/config2.o,
    gpasm/testsuite/gpasm.project/objfiles/code_pack.o,
    gpasm/testsuite/gpasm.project/objfiles/pageselw2.o,
    gpasm/testsuite/gpasm.project/objlstfiles/config2.lst,
    gpasm/testsuite/gpasm.project/objlstfiles/code_pack.lst,
    gpasm/testsuite/gpasm.project/objlstfiles/pageselw2.lst:
    regenerated with MPASMX 5.49

2013-04-17  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/directive.c:
    fixed the gpasm part of bug #263 segmentation fault - svn 961

2013-04-14  Borut Razem  <borutr@users.sourceforge.net>
  * gplink/gplink.c, libgputils/gparchive.c, libgputils/gparchive.h,
    libgputils/gpreadobj.c, libgputils/gpreadobj.h:
    fixed bug #263 segmentation fault - svn 961

2013-04-11  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/directive.c, gpasm/gpasm.h.in, gpasm/coff.c, gpasm/coff.h,
    gpasm/gpasm.c, gpasm/scan.l, libgputils/gpcofflink.c,
    libgputils/gpcoffgen.c, libgputils/gpcoffgen.h:
    implemented enhancement requests
    #61 - "__idlocs and __config generate line numbers" and
    #58 Generate mpasm compatible .config sections
  * gputils/gpvo.c, gpasm/evaluate.c: cosmetic changes
  * libgputils/gpmemory.c, gpasm/lst.c: